# espresso

./: espresso.cabal
lib/: Espresso.hs
lib/Espresso/: Programs.hs  Types.hs  Util.hs
lib/Espresso/Programs/: Alacritty.hs
lib/Espresso/Util/: Network.hs  Warnings.hs
