cabal-version:      3.0
name:               espresso
version: 0.0.0.3
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            AGPL-3.0-only
license-file:       LICENSE
author:             arcticinferno
maintainer:         nil

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:
        Espresso
        Espresso.Types
        Espresso.Util
        Espresso.Util.Network
        Espresso.Programs
        Espresso.Programs.Alacritty

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0
      , http-conduit
      , bytestring
      , process
      , yaml
      , aeson
      , text
    hs-source-dirs:   lib
    default-language: Haskell2010

executable espresso
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        espresso

    hs-source-dirs:   src
    default-language: Haskell2010
